ΜΑΘΗΜΑΤΑ/ΗΥ-340/PROJECTS/Compiler_Exec/examples/phase_2/Errors/Error3.asc
//
{{

x = 123;

function a(){

       function b(){

               x = 5;		//Cannot acces 'x' inside function b'
       }

       function c(){
               b();
       }

}

}}
